--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <style>
       body {
-        background: url(images/bg-image.jpg) no-repeat;
+        background: url(assets/images/bg-image.jpg) no-repeat;
         background-size: cover;
         height: 100vh;
       }
@@ -45,12 +45,16 @@
         </div>
       </form>
       <div class="weather-status text-white text-center">
-        <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="" />
-        <h1>Dhaka</h1>
-        <h3><span>38.06</span>&deg;C</h3>
-        <h1 class="lead">Clouds</h1>
+        <img
+          id="weather-icon"
+          src="https://openweathermap.org/img/wn/02d@2x.png"
+          alt=""
+        />
+        <h1 id="city">Dhaka</h1>
+        <h3><span id="temp">38.06</span>&deg;C</h3>
+        <h1 class="lead" id="weather">Clouds</h1>
       </div>
     </div>
-    <script src="js/app.js"></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
